--- a/Index.html
+++ b/Index.html
@@ -380,10 +380,9 @@
         justify-content: center;
     }
     .social-icons a:hover {
-        color: var(--main-blue);
         transform: translateY(-3px);
     }
-    .social-icons svg {
+    .social-icons img {
         width: 30px;
         height: 30px;
     }
@@ -559,19 +558,19 @@
                 <h2 class="section-heading">My Socials</h2>
                 <div class="social-icons">
                     <a href="https://www.youtube.com/channel/UCRLPBBL_LGFl14mIGaOMnxA" target="_blank" rel="noopener noreferrer" title="YouTube">
-                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M21.582,6.186c-0.23-0.86-0.908-1.538-1.768-1.768C18.267,4,12,4,12,4S5.733,4,4.186,4.418 c-0.86,0.23-1.538,0.908-1.768,1.768C2,7.733,2,12,2,12s0,4.267,0.418,5.814c0.23,0.86,0.908,1.538,1.768,1.768 C5.733,20,12,20,12,20s6.267,0,7.814-0.418c0.861-0.23,1.538-0.908,1.768-1.768C22,16.267,22,12,22,12S22,7.733,21.582,6.186z M9.5,15.5V8.5L16.5,12L9.5,15.5z"/></svg>
+                        <img src="https://raw.githubusercontent.com/Samplayshindi/Test/main/Assets/Youtube.png" alt="YouTube">
                     </a>
                     <a href="https://www.instagram.com/the.silent.kidd/" target="_blank" rel="noopener noreferrer" title="Instagram">
-                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M12 2c-2.717 0-3.056.01-4.122.06-1.065.05-1.79.217-2.428.465a4.898 4.898 0 00-1.77 1.144A4.898 4.898 0 002.536 5.44c-.248.638-.415 1.363-.465 2.428C2.01 8.944 2 9.283 2 12s.01 3.056.06 4.122c.05 1.065.217 1.79.465 2.428.255.66.588 1.214 1.144 1.77.556.556 1.11.889 1.77 1.144.638.248 1.363.415 2.428.465C8.944 21.99 9.283 22 12 22s3.056-.01 4.122-.06c1.065-.05 1.79-.217 2.428-.465.66-.255 1.214-.588 1.77-1.144.556-.556.889-1.11 1.144-1.77.248-.638.415-1.363.465-2.428.05-1.066.06-1.405.06-4.122s-.01-3.056-.06-4.122c-.05-1.065-.217-1.79-.465-2.428a4.898 4.898 0 00-1.144-1.77c-.556-.556-1.11-.889-1.77-1.144-.638-.248-1.363-.415-2.428-.465C15.056 2.01 14.717 2 12 2zm0 4c-3.309 0-6 2.691-6 6s2.691 6 6 6 6-2.691 6-6-2.691-6-6-6zm0 10c-2.206 0-4-1.794-4-4s1.794-4 4-4 4 1.794 4 4-1.794 4-4 4zm6.4-10.8c-.663 0-1.2.537-1.2 1.2s.537 1.2 1.2 1.2 1.2-.537 1.2-1.2-.537-1.2-1.2-1.2z"/></svg>
+                        <img src="https://raw.githubusercontent.com/Samplayshindi/Test/main/Assets/Instagram.png" alt="Instagram">
                     </a>
                     <a href="https://x.com/SamPlaysHindi" target="_blank" rel="noopener noreferrer" title="X / Twitter">
-                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231L18.244 2.25zm-1.161 17.52h1.833L7.084 4.126H5.117l12.966 15.644z"/></svg>
+                        <img src="https://raw.githubusercontent.com/Samplayshindi/Test/main/Assets/Twitter.png" alt="X / Twitter">
                     </a>
                     <a href="https://discord.com/invite/shM9m47vBa" target="_blank" rel="noopener noreferrer" title="Discord">
-                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M20.317,4.431c-0.468-0.297-0.962-0.543-1.48-0.732C18.3,3.5,17.74,3.36,17.15,3.29C17.12,3.28,17.09,3.28,17.06,3.27C17.03,3.26,17,3.26,16.97,3.25c-0.08-0.01-0.17-0.01-0.25-0.01c-0.03,0-0.05,0-0.08,0c-0.54-0.07-1.1-0.1-1.69-0.1s-1.15,0.03-1.69,0.1c-0.03,0-0.05,0-0.08,0c-0.08,0-0.17,0.01-0.25,0.01c-0.03,0-0.06,0.01-0.09,0.01c-0.03,0.01-0.06,0.01-0.09,0.02c-0.58,0.07-1.15,0.21-1.69,0.41c-0.52,0.19-1.01,0.43-1.48,0.73C6.3,5.4,5.15,6.91,4.6,8.86C4.5,9.34,4.37,9.8,4.27,10.28c-0.02,0.15-0.05,0.29-0.08,0.44c-0.01,0.08-0.03,0.17-0.04,0.25c-0.01,0.06-0.01,0.11-0.01,0.17s0,0.11,0.01,0.17c0.01,0.08,0.02,0.17,0.04,0.25c0.02,0.15,0.05,0.29,0.08,0.44c0.1,0.48,0.23,0.94,0.39,1.38c0.55,1.95,1.7,3.47,3.22,4.43c0.47,0.3,0.96,0.54,1.48,0.73c0.54,0.2,1.1,0.34,1.69,0.41c0.03,0.01,0.06,0.01,0.09,0.02c0.03,0.01,0.06,0.01,0.09,0.01c0.08,0,0.17,0.01,0.25,0.01c0.03,0,0.05,0,0.08,0c0.54,0.07,1.1,0.1,1.69,0.1s1.15-0.03,1.69-0.1c0.03,0,0.05,0,0.08,0c0.08,0,0.17-0.01,0.25-0.01c0.03,0,0.06-0.01,0.09-0.01c0.03,0,0.06-0.01,0.09-0.02c0.58-0.07,1.15-0.21,1.69-0.41c0.52-0.19,1.01-0.43,1.48-0.73c1.52-0.96,2.67-2.48,3.22-4.43c0.16-0.45,0.29-0.9,0.39-1.38c0.02-0.15,0.05-0.29,0.08-0.44c0.01-0.08,0.03-0.17,0.04-0.25c0.01-0.06,0.01-0.11,0.01-0.17s0-0.11-0.01-0.17c-0.01-0.08-0.02-0.17-0.04-0.25c-0.02-0.15-0.05-0.29-0.08-0.44C20.03,9.8,19.9,9.34,19.74,8.86C19.19,6.91,18.04,5.4,16.52,4.43z M10,15.5c-0.83,0-1.5-0.67-1.5-1.5s0.67-1.5,1.5-1.5s1.5,0.67,1.5,1.5S10.83,15.5,10,15.5z M14,15.5c-0.83,0-1.5-0.67-1.5-1.5s0.67-1.5,1.5-1.5s1.5,0.67,1.5,1.5S14.83,15.5,14,15.5z"/></svg>
+                        <img src="https://raw.githubusercontent.com/Samplayshindi/Test/main/Assets/discord.png" alt="Discord">
                     </a>
                     <a href="https://github.com/Samplayshindi/Main" target="_blank" rel="noopener noreferrer" title="GitHub">
-                        <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605C6.062 15.34 3.398 14.33 3.398 8.4c0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 5.93-2.665 6.94-5.475 7.24.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12z"/></svg>
+                        <img src="https://raw.githubusercontent.com/Samplayshindi/Test/main/Assets/github.png" alt="GitHub">
                     </a>
                 </div>
             </div>
