--- a/Index.html
+++ b/Index.html
@@ -558,7 +558,7 @@
                 <h2 class="section-heading">My Socials</h2>
                 <div class="social-icons">
                     <a href="https://www.youtube.com/channel/UCRLPBBL_LGFl14mIGaOMnxA" target="_blank" rel="noopener noreferrer" title="YouTube">
-                       <img src="https://raw.githubusercontent.com/Samplayshindi/Test/main/Assets/Youtube.svg" alt="YouTube">
+                       <img src="https://raw.githubusercontent.com/Samplayshindi/Test/main/Assets/Youtube.png
                     </a>
                     <a href="https://www.instagram.com/the.silent.kidd/" target="_blank" rel="noopener noreferrer" title="Instagram">
                         <img src="https://raw.githubusercontent.com/Samplayshindi/Test/main/Assets/Instagram.png" alt="Instagram">
