--- a/About.html
+++ b/About.html
@@ -839,7 +839,7 @@
             </div>
             <div class="side-menu-content">
                 <div class="setting-section menu-nav-links">
-                     <a href="index.html" data-i18n-key="navHome">Home</a>
+                     <a href="Index.html" data-i18n-key="navHome">Home</a>
                      <a href="RecentVideos.html" data-i18n-key="navRecentVideos">Recent Videos</a>
                 </div>
                 <div class="setting-section accessibility-options">
